[package]
name = "mdwnio"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight proxy that serves the markdown web"
repository = "https://github.com/esh/mdwn"
homepage = "https://mdwn.io"
keywords = ["markdown", "proxy", "llm", "web"]
categories = ["web-programming", "command-line-utilities"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "hickory-dns",
    "stream",
] }

# Async utilities
futures-util = "0.3"

# HTML parsing & conversion
scraper = "0.22"
readability = "0.3"
htmd = "0.1"

# JSON & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL handling
url = "2"

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# IP address handling
ipnetwork = "0.20"

[profile.release]
lto = true
codegen-units = 1
strip = true
